kubernetes/yamls/application/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: viber
  namespace: viber
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - susi-viberbot.tk
    secretName: susi-viberbot-tls
  rules:
  - host: susi-viberbot.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: viber
          servicePort: 80
